--- a/index.html
+++ b/index.html
@@ -1,9 +1,97 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>インターネットに潜む危険</title>
-</head>
-<body>
-</body>
+
+  <head>
+    <meta charset="UTF-8">
+    <title>インターネットに潜む危険</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="jquerybox.min.js"></script>
+    <script src="jquerytopbtn76 .min.js"></script>
+  </head>
+
+  <body>
+    <!--グローバルナビ-->
+    <div class="head">
+      <div class="topiconbox">
+        <div class="topicon">
+          <h1><a href="index.html"><img src="img/topicon.png" alt="Internet Security" width="240px" height="100px"></a></h1>
+        </div>
+      </div>
+
+      <div class="topnavbox">
+        <nav class="topnav">
+          <ul>
+          <li class="topbutton"><a href="index.html">Internet Securityとは</a></li>
+          <li class="topbutton"><a href="index.html">サイトマップ</a></li>
+          <li class="topbutton"><a href="index.html">サイト情報</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="topengbox">
+        <a href="eng.html" class="topeng">English</a>
+      </div>
+    </div>
+
+    <!--スライド-->
+
+    <!--トピック-->
+    <div class="topicbox">
+      <div class="topic">
+        <center>
+        <span style="border-bottom: solid 1px #5E5E5E;"> ー Topic ー </span>
+        </center>
+      </div>
+    </div>
+
+    <center>
+    <div class="boxA">
+      <div class="box1">
+
+      </div>
+      <div class="box2">
+
+      </div>
+      <div class="box3">
+
+      </div>
+      <div class="box4">
+
+      </div>
+    </div>
+    </center>
+
+    <center>
+    <div class="boxB">
+      <div class="box5">
+
+      </div>
+      <div class="box6">
+
+      </div>
+      <div class="box7">
+
+      </div>
+      <div class="box8">
+
+      </div>
+    </div>
+    </center>
+      <a href="more"class="more">MORE</a>
+    <center>
+
+
+<br><br><br><br>
+
+
+    <!--サイト構成-->
+    <div class="sitekousei">
+    </div>
+
+    <!--フッター-->
+      <footer class="footer">
+        <p class="cr">Copyright 2017 Internet Security </p>
+      </footer>
+  </body>
+
 </html>
