不要な行を削除

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <title>インターネットに潜む危険</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="jquerybox.min.js"></script>
-    <script src="jquerytopbtn76 .min.js"></script>
   </head>
 
   <body>
@@ -47,7 +45,8 @@
     <center>
     <div class="boxA">
       <div class="box1">
-
+        <div class="hover">
+        </div>
       </div>
       <div class="box2">
 
