--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>インターネットに潜む危険</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="jquery.js"></script>
   </head>
 
   <body>
