Topicのホバー時の機能を途中まで実装

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>インターネットに潜む危険</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="jquery.js"></script>
+    <script src="hover.js"></script>
   </head>
 
   <body>
