--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 			<div class="topnavbox">
 				<nav class="topnav">
 					<ul>
-					<li class="topbutton"><a href="index.html">Internet Securityとは</a></li>
-					<li class="topbutton"><a href="index.html">サイトマップ</a></li>
-					<li class="topbutton"><a href="index.html">サイト情報</a></li>
+					<li class="topbutton"><a href="index.html"><span style="border-bottom: solid 3px #ffffff;">Internet Securityとは</span></a></li>
+					<li class="topbutton"><a href="index.html"><span style="border-bottom: solid 3px #ffffff;">サイトマップ</span></a></li>
+					<li class="topbutton"><a href="info.html"><span style="border-bottom: solid 3px #ffffff;">サイト情報</span></a></li>
 					</ul>
 				</nav>
 			</div>
@@ -33,7 +33,8 @@
 			</div>
 		</div>
 
-		<!--スライド-->
+		<!--スライド(仮)-->
+		<img src="img/slide1.png" class="slide">
 
 		<!--トピック-->
 		<div class="topicbox">
@@ -45,52 +46,64 @@
 		</div>
 
 		<center>
-		<div class="boxA">
-			<div class="box" id="box1">
-				<div id="hover1">
-  				</div>
-			</div>
-			<div class="box" id="box2">
-				<div id="hover2">
+			<div class="boxA">
+				<div class="box" id="box1">
+					<img class="boximg" src="img/pc.png" width="100%"></img>
+					<div id="hover1">
+					</div>
+				</div>
+				<div class="box" id="box2">
+					<img class="boximg" src="img/folder.png" width="100%"></img>
+					<div id="hover2">
+					</div>
+				</div>
+				<div class="box" id="box3">
+					<img class="boximg" src="img/web.png" width="100%"></img>
+					<div id="hover3">
+					</div>
+				</div>
+				<div class="box" id="box4">
+					<img class="boximg" src="img/sns.png" width="100%"></img>
+					<div id="hover4">
+					</div>
 				</div>
 			</div>
-			<div class="box" id="box3">
-				<div id="hover3">
-				</div>
-			</div>
-			<div class="box" id="box4">
-				<div id="hover4">
-				</div>
-			</div>
-		</div>
 		</center>
 
 		<center>
-		<div class="boxB">
-			<div class="box" id="box5">
-				<div id="hover5">
-  				</div>
+			<div class="boxB">
+				<div class="box" id="box5">
+					<img class="boximg" src="img/office.png" width="100%"></img>
+					<div id="hover5">
+					</div>
+				</div>
+				<div class="box" id="box6">
+					<img class="boximg" src="img/iot.png" width="100%"></img>
+					<div id="hover6">
+					</div>
+				</div>
+				<div class="box" id="box7">
+					<img class="boximg" src="img/camera.png" width="100%"></img>
+					<div id="hover7">
+					</div>
+				</div>
+				<div class="box" id="box8">
+					<img class="boximg" src="img/quiz.png" width="100%"></img>
+					<div id="hover8">
+					</div>
+				</div>
 			</div>
-			<div class="box" id="box6">
-				<div id="hover6">
-  				</div>
-			</div>
-			<div class="box" id="box7">
-				<div id="hover7">
-  				</div>
-			</div>
-			<div class="box" id="box8">
-				<div id="hover8">
-  				</div>
-			</div>
-		</div>
 		</center>
-			<a href="more"class="more">MORE</a>
+
+		<br>
+
 		<center>
+			<div class="morebox">
+				<a href="more" class="more">MORE</a>
+			</div>
+		</center>
 
-
-<br><br><br><br>
-
+		<br><br><br><br>
 
 		<!--サイト構成-->
 		<div class="sitekousei">
