--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="jquery.js"></script>
 		<script src="hover.js"></script>
+		<script src="slide.js"></script>
 	</head>
 
 	<body>
@@ -50,21 +51,29 @@
 				<div class="box" id="box1">
 					<img class="boximg" src="img/pc.png" width="100%"></img>
 					<div id="hover1">
+						<p>パソコン</p>
+						<p1>自分のパソコンを守ろう！</p1>
 					</div>
 				</div>
 				<div class="box" id="box2">
 					<img class="boximg" src="img/folder.png" width="100%"></img>
 					<div id="hover2">
+						<p>個人情報</p>
+						<p1>個人情報を守ろう！</p1>
 					</div>
 				</div>
 				<div class="box" id="box3">
 					<img class="boximg" src="img/web.png" width="100%"></img>
 					<div id="hover3">
+						<p>悪質サイト</p>
+						<p1>悪質サイトに気をつけよう！</p1>
 					</div>
 				</div>
 				<div class="box" id="box4">
 					<img class="boximg" src="img/sns.png" width="100%"></img>
 					<div id="hover4">
+						<p>SNS</p>
+						<p1>SNSを正しく使おう！</p1>
 					</div>
 				</div>
 			</div>
@@ -75,21 +84,29 @@
 				<div class="box" id="box5">
 					<img class="boximg" src="img/office.png" width="100%"></img>
 					<div id="hover5">
+						<p>会社の情報</p>
+						<p1>会社の情報を守ろう！</p1>
 					</div>
 				</div>
 				<div class="box" id="box6">
 					<img class="boximg" src="img/iot.png" width="100%"></img>
 					<div id="hover6">
+						<p>IoT</p>
+						<p1>IoTにもセキュリティ？</p1>
 					</div>
 				</div>
 				<div class="box" id="box7">
 					<img class="boximg" src="img/camera.png" width="100%"></img>
 					<div id="hover7">
+						<p>監視</p>
+						<p1>監視のセキュリティ！</p1>
 					</div>
 				</div>
 				<div class="box" id="box8">
 					<img class="boximg" src="img/quiz.png" width="100%"></img>
 					<div id="hover8">
+						<p>クイズ！</p>
+						<p1>知識を確かめよう！</p1>
 					</div>
 				</div>
 			</div>
@@ -98,16 +115,40 @@
 		<br>
 
 		<center>
-			<div class="morebox">
-				<a href="more" class="more">MORE</a>
-			</div>
+			<a href="index.html" class="more">MORE</a>
 		</center>
 
-		<br><br><br><br>
+		<br>
+
+		<!--tour-->
+		<div class="topicbox">
+			<div class="topic">
+				<center>
+					<span style="border-bottom: solid 1px #5E5E5E;"> ー WebSite Tour ー </span>
+				</center>
+			</div>
+		</div>
+		<div class="foryou">
+			<p>全てを学びたいなら！<p>
+		</div>
+		<center>
+			<a href="tour/index.html" class="letsgo">
+				ツアーに出発！
+			</a>
+		</center>
+
+
+
+		<br><br><br>
 
 		<!-- サイト構成 -->
 		<div class="sitekousei">
 		</div>
+
+		<!--topボタン-->
+		<center>
+			<a href="#wrap" class="totop"><img src="img/totop.png" width="8%"></a>
+		</center>
 
 		<!-- フッター -->
 			<footer class="footer">
