ツアーのボタンを実装

--- a/index.html
+++ b/index.html
@@ -132,9 +132,11 @@
 			<p>全てを学びたいなら！<p>
 		</div>
 		<center>
-			<a href="tour/index.html" class="letsgo">
-				ツアーに出発！
-			</a>
+			<div class="letsgobox">
+				<a href="tour/index.html" class="letsgo">
+					ツアーに出発！
+				</a>
+			</div>
 		</center>
 
 
