Topボタンを実装

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script src="jquery.js"></script>
 		<script src="hover.js"></script>
 		<script src="slide.js"></script>
+		<script src="scroll.js"></script>
 	</head>
 
 	<body>
@@ -147,9 +148,9 @@
 		<div class="sitekousei">
 		</div>
 
-		<!--topボタン-->
+		<!-- topボタン -->
 		<center>
-			<a href="#wrap" class="totop"><img src="img/totop.png" width="8%"></a>
+			<a class="totop"><img src="img/totop.png" onClick="scroll()"></a>
 		</center>
 
 		<!-- フッター -->
