fix #18 Topボタンが反応しないバグを修正

--- a/index.html
+++ b/index.html
@@ -139,8 +139,6 @@
 			</div>
 		</center>
 
-
-
 		<br><br><br>
 
 		<!-- サイト構成 -->
@@ -149,7 +147,7 @@
 
 		<!-- topボタン -->
 		<center>
-			<a class="totop"><img src="img/totop.png" onClick="scroll()"></a>
+			<a class="totop"><img src="img/totop.png" onClick="$('body, html').animate({scrollTop: 0}, 400, 'swing');"></a>
 		</center>
 
 		<!-- フッター -->
