記事内のリンクを修正

--- a/pages/info.html
+++ b/pages/info.html
@@ -22,7 +22,7 @@
 				<nav class="topnav">
 					<ul>
 						<li class="topbutton"><a href="whatis.html"><span style="border-bottom: solid 3px #ffffff;">Internet Securityとは</span></a></li>
-						<li class="topbutton"><a href="index.html"><span style="border-bottom: solid 3px #ffffff;">サイトマップ</span></a></li>
+						<li class="topbutton"><a href="../index.html"><span style="border-bottom: solid 3px #ffffff;">サイトマップ</span></a></li>
 						<li class="topbutton"><a href="info.html"><span style="border-bottom: solid 3px #ffffff;">サイト情報</span></a></li>
 					</ul>
 				</nav>
@@ -60,7 +60,7 @@
 		<div class="sitekousei">
 
 		</div>
-		
+
 		<!-- topボタン -->
 		<center>
 			<a class="totop"><img src="../img/totop.png" onClick="$('body, html').animate({scrollTop: 0}, 400, 'swing');"></a>
