大幅な変更

--- a/index.html
+++ b/index.html
@@ -48,67 +48,83 @@
 
 		<center>
 			<div class="boxA">
-				<div class="box" id="box1">
-					<img class="boximg" src="img/pc.png" width="100%"></img>
-					<div id="hover1">
-						<p>パソコン</p>
-						<p1>自分のパソコンを守ろう！</p1>
+				<a href="pages/pc.html">
+					<div class="box" id="box1">
+						<img class="boximg" src="img/pc.png" width="100%"></img>
+						<div id="hover1">
+							<p>パソコン</p>
+							<p1>自分のパソコンを守ろう！</p1>
+						</div>
 					</div>
-				</div>
-				<div class="box" id="box2">
-					<img class="boximg" src="img/folder.png" width="100%"></img>
-					<div id="hover2">
-						<p>個人情報</p>
-						<p1>個人情報を守ろう！</p1>
+				</a>
+				<a href="pages/priv.html">
+					<div class="box" id="box2">
+						<img class="boximg" src="img/folder.png" width="100%"></img>
+						<div id="hover2">
+							<p>個人情報</p>
+							<p1>個人情報を守ろう！</p1>
+						</div>
 					</div>
-				</div>
-				<div class="box" id="box3">
-					<img class="boximg" src="img/web.png" width="100%"></img>
-					<div id="hover3">
-						<p>悪質サイト</p>
-						<p1>悪質サイトに気をつけよう！</p1>
+				</a>
+				<a href="pages/badsite.html">
+					<div class="box" id="box3">
+						<img class="boximg" src="img/web.png" width="100%"></img>
+						<div id="hover3">
+							<p>悪質サイト</p>
+							<p1>悪質サイトに気をつけよう！</p1>
+						</div>
 					</div>
-				</div>
-				<div class="box" id="box4">
-					<img class="boximg" src="img/sns.png" width="100%"></img>
-					<div id="hover4">
-						<p>SNS</p>
-						<p1>SNSを正しく使おう！</p1>
+				</a>
+				<a href="pages/sns.html">
+					<div class="box" id="box4">
+						<img class="boximg" src="img/sns.png" width="100%"></img>
+						<div id="hover4">
+							<p>SNS</p>
+							<p1>SNSを正しく使おう！</p1>
+						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 		</center>
 
 		<center>
 			<div class="boxB">
-				<div class="box" id="box5">
-					<img class="boximg" src="img/office.png" width="100%"></img>
-					<div id="hover5">
-						<p>会社の情報</p>
-						<p1>会社の情報を守ろう！</p1>
+				<a href="pages/com.html">
+					<div class="box" id="box5">
+						<img class="boximg" src="img/office.png" width="100%"></img>
+						<div id="hover5">
+							<p>会社の情報</p>
+							<p1>会社の情報を守ろう！</p1>
+						</div>
 					</div>
-				</div>
-				<div class="box" id="box6">
-					<img class="boximg" src="img/iot.png" width="100%"></img>
-					<div id="hover6">
-						<p>IoT</p>
-						<p1>IoTにもセキュリティ？</p1>
+				</a>
+				<a href="pages/iot.html">
+					<div class="box" id="box6">
+						<img class="boximg" src="img/iot.png" width="100%"></img>
+						<div id="hover6">
+							<p>IoT</p>
+							<p1>IoTにもセキュリティ？</p1>
+						</div>
 					</div>
-				</div>
-				<div class="box" id="box7">
-					<img class="boximg" src="img/camera.png" width="100%"></img>
-					<div id="hover7">
-						<p>監視</p>
-						<p1>監視のセキュリティ！</p1>
+				</a>
+				<a href="pages/pc.html">
+					<div class="box" id="box7">
+						<img class="boximg" src="img/camera.png" width="100%"></img>
+						<div id="hover7">
+							<p>監視</p>
+							<p1>監視のセキュリティ！</p1>
+						</div>
 					</div>
-				</div>
-				<div class="box" id="box8">
-					<img class="boximg" src="img/quiz.png" width="100%"></img>
-					<div id="hover8">
-						<p>クイズ！</p>
-						<p1>知識を確かめよう！</p1>
+				</a>
+				<a href="pages/quiz.html">
+					<div class="box" id="box8">
+						<img class="boximg" src="img/quiz.png" width="100%"></img>
+						<div id="hover8">
+							<p>クイズ！</p>
+							<p1>知識を確かめよう！</p1>
+						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 		</center>
 		<br>
