--- a/pages/com.html
+++ b/pages/com.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 	<head>
 		<meta charset="UTF-8">
-		<title>Internet Securityとは</title>
+		<title>会社の情報</title>
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<script src="../jquery.js"></script>
 		<script src="../info.js"></script>
@@ -42,7 +42,12 @@
         <br>
         <center>
           <div class="pagearticlebox">
-            インターネットセキュリティとはコンピューターを<br><a style="color: red;">コンピュータウイルス</a>、<a style="color: red;">不正アクセス</a>、<a style="color: red;">不正利用</a>、<a style="color: red;">詐欺</a>などから守ることです。            <center><img src="../img/example.png" width="85%" style="padding-top:5px;"></center>
+            インターネットセキュリティとはコンピューターを<br>
+            <a style="color: red;">コンピュータウイルス</a>、
+            <a style="color: red;">不正アクセス</a>、
+            <a style="color: red;">不正利用</a>、
+            <a style="color: red;">詐欺</a>などから守ることです。
+            <center><img src="../img/example.png" width="85%" style="padding-top:5px;"></center>
           </div>
         </center>
 
@@ -52,12 +57,20 @@
         <br>
         <center>
           <div class="pagearticlebox">
-            今日の社会では、コンピュータやスマートフォンが普及し、子供またはコンピュータへの知識がない人でも<a style="color: red;">気軽</a>にインターネットにアクセスできるようになりました。<br><br>
-            しかし、情報セキュリティへの<a style="color: red;">意識</a>は未だ低いままではないでしょうか。今のままのセキュリティへの意識で十分なのでしょうか。<br><br>
-            オレオレ詐欺や盗難の対策をするのと同じくらい、情報セキュリティへ意識を向け、<a style="color: red;">対策</a>をすることはとても重要なのです。<br><br>
-            インターネット上にはコンピュータウイルス、乗っ取り、悪意のあるサイトなど、様々な<a style="color: red;">脅威</a>があります。しかし、それら全てを知り、対策を取るのは簡単なことではありません。<br><br>
-            最近ではランサムウェア(ウイルスの１種)による<a style="color: red;">世界規模</a>での被害も話題になりました。<br><br>
-            重要なOSのアップデートを怠ったり、<a style="color: red;">簡単なパスワード</a>を設定したり、パスワードを使いまわしたりしていないでしょうか？<br><br>
+            今日の社会では、コンピュータやスマートフォンが普及し、<br>
+            子供またはコンピュータへの知識がない人でも<br>
+            <a style="color: red;">気軽</a>にインターネットにアクセスできるようになりました。<br><br>
+            しかし、情報セキュリティへの<a style="color: red;">意識</a>は未だ低いままではないでしょうか。<br>
+            今のままのセキュリティへの意識で十分なのでしょうか。<br><br>
+            オレオレ詐欺や盗難の対策をするのと同じくらい、情報セキュリティへ意識を向け、<br>
+            <a style="color: red;">対策</a>をすることはとても重要なのです。<br><br>
+            インターネット上にはコンピュータウイルス、乗っ取り、悪意のあるサイトなど、<br>
+            様々な<a style="color: red;">脅威</a>があります。<br>
+            しかし、それら全てを知り、対策を取るのは簡単なことではありません。<br><br>
+            最近ではランサムウェア(ウイルスの１種)による<a style="color: red;">世界規模</a>での被害も<br>
+            話題になりました。<br><br>
+            重要なOSのアップデートを怠ったり、<a style="color: red;">簡単なパスワード</a>を設定したり、<br>
+            パスワードを使いまわしたりしていないでしょうか？<br><br>
             このサイトで様々な<a style="color: red;">知識</a>を得てもらい、役立てて欲しいのです。
           </div>
         </center>
