--- a/pages/info.html
+++ b/pages/info.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 	<head>
 		<meta charset="UTF-8">
-		<title>インターネットに潜む危険</title>
+		<title>サイト情報</title>
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<script src="../jquery.js"></script>
 		<script src="../info.js"></script>
