info.htmlに利用引用情報の記載場所を追加

--- a/pages/info.html
+++ b/pages/info.html
@@ -56,6 +56,15 @@
 		<center><img src="../img/sp.png" width="90%" height="90%"></center>
 		<br>
 
+		<!-- 利用引用情報 -->
+		<div class="use">
+			<div class="topic">
+				<center>
+					<span style="border-bottom: solid 1px #5E5E5E;"> ー Use and Quotation ー </span>
+				</center>
+			</div>
+		</div>
+
 		<!-- サイト構成 -->
 		<div class="sitekousei">
 
