--- a/pages/info.html
+++ b/pages/info.html
@@ -37,7 +37,10 @@
 		<div class="topicbox" style="padding-bottom:5px;">
 			<div class="topic">
 				<center>
-					<span style="border-bottom: solid 1px #5E5E5E;"> ー System ー </span>
+					<span style="border-bottom: solid 1px #5E5E5E;" class="topiceng"> ー System ー </span>
+				</center>
+				<center>
+					<span class="topicjpn">推奨環境</span>
 				</center>
 			</div>
 		</div>
@@ -55,6 +58,19 @@
 		<br>
 		<center><img src="../img/sp.png" width="90%" height="90%"></center>
 		<br>
+		
+		
+		<!--参考資料 -->
+		<div class="topicbox" style="padding-bottom:5px;">
+			<div class="topic">
+				<center>
+					<span style="border-bottom: solid 1px #5E5E5E;" class="topiceng"> ー Bibliography ー </span>
+				</center>
+				<center>
+					<span class="topicjpn">参考文献</span>
+				</center>
+			</div>
+		</div>
 
 		<!-- サイト構成 -->
 		<div class="sitekousei">
