個人情報のページを作成

--- a/pages/priv.html
+++ b/pages/priv.html
@@ -48,44 +48,38 @@
           <a style="color: red;">SNSでの個人情報</a>
         </div>
         <br>
-        SNSを使っているときに個人情報流出が問題となってきます。個人情報が流出するとどんなことが起こると思いますか。<br><br>
+        SNSを使っているときに<a style="color: red;">個人情報流出</a>が問題となってきます。個人情報が流出するとどんなことが起こると思いますか。<br><br>
         掲示板やSNSなどで多くの人に名前、住所、電話番号が晒されることがあります。イタズラ電話がかかってきたり、知らない業者から営業の電話がかかってきたり。<br><br>
         必ずそうなるとは限りませんが、そうならないという保証はありません。ですのでネットに個人情報が流出しないように気をつける必要があります。<br><br>
-        そのための対策としては詳しくは<a href="sns.html">SNSのページ</a>にも書きましたが写真自体の位置情報添付をオフにする、SNSの投稿の際位置情報添付をしない。といったものが挙げられます。<br><br>
-        他にもtwitterなどの知らない人でも見れるSNSでは家から外の写真を撮ったものをアップしない、または鍵付きのアカウントにするといった配慮が必要です。家の外の様子で住所がバレてしまうこともあります。<br><br>
-        このようにSNSと言うものはとても恐ろしいものなのです。
         <div class="pro">
           <span style="border-bottom: solid 1px black">◎ 対策　</span>
         </div>
         <center>
         <div class="pagearticlebox2">
-        	
+        	詳しくは<a href="sns.html">SNSのページ</a>にも書きましたが写真自体の位置情報添付をオフにする、SNSの投稿の際位置情報添付をしない。といったものが挙げられます。<br><br>
+        	他にもTwitterなどの知らない人でも見れるSNSでは家から外の写真を撮ったものをアップしない、または<a style="color: red;">鍵付きのアカウント</a>にするといった配慮が必要です。家の外の様子で住所がバレてしまうこともあります。<br><br>
+        	このようにSNSと言うものはとても恐ろしいものなのです。
         </div>
         </center>
         <br>
         <br>
         <div class="pagetop2">
-          <a style="color: red;">偽のアンチウイルスサイト</a>
+          <a style="color: red;">その他の個人情報</a>
         </div>
-        <br>急に、ウイルスに感染しているかのような表示を出し、偽のアンチウイルスソフトをダウンロードするように促すサイトです。 
+        <br>
+        他にも個人情報が漏れる可能性があるものとして挙げられるのが<a style="color: red;">フリーWi-Fi</a>です。フリーWi-Fiは誰でも利用できるので、攻撃者に狙われやすく特に注意が必要です。<br><br>
+        フリーWi-Fiでユーザーが暗号化されていないWi-Fiスポットに接続して保護されていないウェブサイトを見た場合、攻撃者によってアカウント情報などが盗まれ、知らないうちにネット上で買い物をされてしまったり、ウェブサイトに登録している個人情報を閲覧する、SNS等に不正ログインしてアカウントを乗っ取り、悪質な広告を拡散させる、といった被害に繋がってしまいます。<br><br>
         <div class="pro">
           <span style="border-bottom: solid 1px black">◎ 対策　</span>
         </div>
         <center>
-        <div class="pagearticlebox2">ワンクリック詐欺サイトと同じように、無視して画面を閉じるだけで構いません。本当にウイルスに感染しているのではないか、と不安に思うかもしれませんが、基本的にはブラウザ上でコンピューターがウイルスに感染しているかを判断することはできません。 </div>
+        <div class="pagearticlebox2">
+        	フリーWi-Fiに接続することははあまりお勧めできません。ですが便利なので危険でも使いたいのが人間です。フリーWi-Fiを頻繁に使う人は<a style="color: red;">セキュリティアプリ</a>を入れて使用しましょう。
+        </div>
         </center>
         <br>
         <br>
-        <div class="pagetop2">
-          <a style="color: red;">偽のサイトや改ざんされたサイト</a>
-        </div>
-        <br>他のサイトをコピーした偽のサイトが作られたり、企業のサーバーが不正にアクセスされて外部の人に操作されることがあります。また、これらのサイトにはウイルスが仕掛けられる事があります。 
-        <div class="pro">
-          <span style="border-bottom: solid 1px black">◎ 対策　</span>
-        </div>
-        <center>
-        <div class="pagearticlebox2">URLが正しいかチェックしたり、接続先のウェブサイトが安全かどうかチェックするサービスを使うことでリスクを減らすことができます。 </div>
-        </center>
+        
       </div>
       </center>
     </div>
