SNSアイコンのアンケートを著作権のページに追加

--- a/pages/cyo.html
+++ b/pages/cyo.html
@@ -48,7 +48,21 @@
         著作権のある作品を使うには著作権を持っている人(<a style="color: red;">著作者</a>)の許可が必要になります。基本的に、インターネット上にある画像や動画には著作権があります。つまり、それらを勝手に使うことはできないということです。<br><br>
         しかし、それでは「インターネット上にある画像をスマホの壁紙にすることもできないの？」と思うかもしれません。これに関しては、<a style="color: red;">私的利用</a>と言って、個人的な利用の範囲では著作者の許可なしに使うこともできます。<br><br>
         ただ、この個人的な利用と言うのは自分だけが見れる環境での使用であって、SNSなどで使う場合にはアウトです。つまりこれは<a style="color: red;">SNSのアイコン</a>にアニメ画像を使うのもアウトだということです。もちろん、テレビの動画やインターネットで見つけた画像をSNSに<a style="color: red;">アップロード</a>するのもアウトです。「SNSでアニメアイコンの人なんてたくさんいるじゃん」と思うかもしれませんが、これは著作権が<a style="color: red;">親告罪</a>という、著作者が訴えないと罪に問われないというものなので、アニメの制作会などが<a style="color: red;">黙認</a>しているという状況です。ですので、アニメアイコンにしてたからという理由で訴えられるというのは、現状ないといっていいでしょう。
-        
+        <div class="ankebox">
+          <div class="ankejissi">&nbsp;アンケートを実施！&nbsp;</div><br>
+          <div class="anke1box">
+            <center>
+              <img src="../img/あんけ１.png" width="70%" height="70%">
+            </center>
+          </div>
+          <div class="anke2box">
+            <center>
+              <img src="../img/あんけ２.png" width="70%" height="70%">
+            </center>
+          </div>
+          <div class="ankemoji1">&nbsp;&nbsp;&nbsp;<a style="color: #61D836;">●</a>LINEのアイコンが法に触れる可能性があると思われる人</div><br>
+          <div class="ankemoji1">&nbsp;&nbsp;&nbsp;<a style="color: #00A2FF;">●</a>SNSのアイコンに有名人・アニメの画像などを使う事がいけない事だと知ってた人</div><br>
+        </div>
         <div class="pagetop2">
           <a style="color: red;">違法ダウンロード</a>
         </div>
