解決策の記号を◎から■に

--- a/pages/cyo.html
+++ b/pages/cyo.html
@@ -68,7 +68,7 @@
         </div>
         <br>中高生の著作権に関わる大きな問題の一つが、違法ダウンロードです。違法ダウンロードとは、ネット上に違法にアップロードされた動画や音楽などを許可なくダウンロードすることで、犯罪になります。誰でも簡単にできるようなことですが、犯罪なので絶対にしないようにしましょう。
         <div class="pro">
-          <span style="border-bottom: solid 1px black">◎ 対策　</span>
+          <span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
         </div>
         <center>
         <div class="pagearticlebox2">よく知られていて多くの人が使っているサイトを使いましょう。ババ。。。
@@ -81,7 +81,7 @@
         </div>
         <br>急に、ウイルスに感染しているかのような表示を出し、偽のアンチウイルスソフトをダウンロードするように促すサイトです。 
         <div class="pro">
-          <span style="border-bottom: solid 1px black">◎ 対策　</span>
+          <span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
         </div>
         <center>
         <div class="pagearticlebox2">ワンクリック詐欺サイトと同じように、無視して画面を閉じるだけで構いません。本当にウイルスに感染しているのではないか、と不安に思うかもしれませんが、基本的にはブラウザ上でコンピューターがウイルスに感染しているかを判断することはできません。 </div>
@@ -93,7 +93,7 @@
         </div>
         <br>他のサイトをコピーした偽のサイトが作られたり、企業のサーバーが不正にアクセスされて外部の人に操作されることがあります。また、これらのサイトにはウイルスが仕掛けられる事があります。 
         <div class="pro">
-          <span style="border-bottom: solid 1px black">◎ 対策　</span>
+          <span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
         </div>
         <center>
         <div class="pagearticlebox2">URLが正しいかチェックしたり、接続先のウェブサイトが安全かどうかチェックするサービスを使うことでリスクを減らすことができます。 </div>
