--- a/pages/sns.html
+++ b/pages/sns.html
@@ -78,7 +78,7 @@
           <a style="color: red;">迷惑</a>をかける可能性があります。なので位置情報をつけるときには十分
           <a style="color: red;">注意</a>してください。
         <div class="pro">
-        <span style="border-bottom: solid 1px black">◎ 解決策　</span>
+        <span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 解決策　</span>
         </div>
         <div class="pro2">写真自体の位置情報添付を
         <a style="color: red;">オフ</a>にする
@@ -106,7 +106,7 @@
         <a style="color: red;">高額な請求</a>や
         <a style="color: red;">迷惑メール</a>が送られてくるといった被害が出ています。
         <div class="pro">
-        <span style="border-bottom: solid 1px black">◎ 解決策　</span>
+        <span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 解決策　</span>
         </div>
         <div class="pro2">ブラウザの
         <a style="color: red;">フィルタリング</a>をオンにする
@@ -130,7 +130,7 @@
         </div><br>
         最近ネット上で嘘の情報が拡散され世間を困らせています。
         <div class="pro">
-        <span style="border-bottom: solid 1px black">◎ 解決策　</span>
+        <span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 解決策　</span>
         </div>
         <div class="pro2">情報リテラシーを身につける</div>
         <center>
@@ -164,7 +164,7 @@
           <a style="color: red;">注意</a>してください。
 
         <div class="pro">
-        <span style="border-bottom: solid 1px black">◎ 解決策　</span>
+        <span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 解決策　</span>
         </div>
         <div class="pro2">写真自体の位置情報添付を
         <a style="color: red;">オフ</a>にする
