--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -28,7 +28,7 @@
 						<a href="whatis.html"><span style="border-bottom: solid 3px #ffffff;">Internet Securityとは</span></a>
 					</li>
 					<li class="topbutton">
-						<a href="sitemap.html"><span style="border-bottom: solid 3px #ffffff;">サイトマップ</span></a>
+						<a href="#"><span style="border-bottom: solid 3px #ffffff;">サイトマップ</span></a>
 					</li>
 					<li class="topbutton">
 						<a href="info.html"><span style="border-bottom: solid 3px #ffffff;">サイト情報</span></a>
