--- a/pages/whatis.html
+++ b/pages/whatis.html
@@ -24,12 +24,12 @@
         <nav class="topnav">
           <ul>
             <li class="topbutton">
-              <a href="whatis.html">
+              <a href="#">
                 <span style="border-bottom: solid 3px #ffffff;">Internet Securityとは</span>
               </a>
             </li>
             <li class="topbutton">
-              <a href="../index.html">
+              <a href="sitemap.html">
                 <span style="border-bottom: solid 3px #ffffff;">サイトマップ</span>
               </a>
             </li>
