--- a/pages/pc.html
+++ b/pages/pc.html
@@ -26,7 +26,7 @@
 						<a href="whatis.html"><span style="border-bottom: solid 3px #ffffff;">Internet Securityとは</span></a>
 					</li>
 					<li class="topbutton">
-						<a href="index.html"><span style="border-bottom: solid 3px #ffffff;">サイトマップ</span></a>
+						<a href="sitemap.html"><span style="border-bottom: solid 3px #ffffff;">サイトマップ</span></a>
 					</li>
 					<li class="topbutton">
 						<a href="info.html"><span style="border-bottom: solid 3px #ffffff;">サイト情報</span></a>
