--- a/pages/priv.html
+++ b/pages/priv.html
@@ -26,7 +26,7 @@
 						<a href="whatis.html"><span style="border-bottom: solid 3px #ffffff;">Internet Securityとは</span></a>
 					</li>
 					<li class="topbutton">
-						<a href="index.html"><span style="border-bottom: solid 3px #ffffff;">サイトマップ</span></a>
+						<a href="sitemap.html"><span style="border-bottom: solid 3px #ffffff;">サイトマップ</span></a>
 					</li>
 					<li class="topbutton">
 						<a href="info.html"><span style="border-bottom: solid 3px #ffffff;">サイト情報</span></a>
@@ -56,7 +56,7 @@
         </div>
         <center>
         <div class="pagearticlebox2">
-        	詳しくは<a href="sns.html">SNSのページ</a>にも書きましたが写真自体の位置情報添付をオフにする、SNSの投稿の際位置情報添付をしない。といったものが挙げられます。<br><br>
+        	詳しくは<a href="sns.html" style="color: #5E5E5E">SNSのページ</a>にも書きましたが写真自体の位置情報添付をオフにする、SNSの投稿の際位置情報添付をしない。といったものが挙げられます。<br><br>
         	他にもTwitterなどの知らない人でも見れるSNSでは家から外の写真を撮ったものをアップしない、または<a style="color: red;">鍵付きのアカウント</a>にするといった配慮が必要です。家の外の様子で住所がバレてしまうこともあります。<br><br>
         	このようにSNSと言うものはとても恐ろしいものなのです。
         </div>
