--- a/pages/sns.html
+++ b/pages/sns.html
@@ -29,7 +29,7 @@
           </a>
         </li>
         <li class="topbutton">
-          <a href="index.html">
+          <a href="sitemap.html">
             <span style="border-bottom: solid 3px #ffffff;">サイトマップ</span>
           </a>
         </li>
