--- a/pages/tour.html
+++ b/pages/tour.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>クイズ！</title>
+	<title>サイトツアー</title>
 	<link href="../style.css" rel="stylesheet" type="text/css">
 	<script src="../jquery.js">
 	</script>
